# mcp-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
bench/claudecode-forkexec/: README.md  compare.py  parse_trace.py  prompt.md  run.sh
bench/claudecode-forkexec/results/: 2026-04-21-rust-v0.122.0.md
bench/codex-forkexec/: README.md  compare.py  parse_trace.py  prompt.md  run.sh
bench/codex-forkexec/results/: 2026-04-20-rust-v0.121.0-batch-v1.md  2026-04-20-rust-v0.121.0-batch-v2.md  2026-04-20-rust-v0.121.0-prefer-mcp.md  2026-04-20-rust-v0.121.0-search-ctx.md  2026-04-20-rust-v0.121.0.md  2026-04-21-rust-v0.122.0-sandbox-ablation.md
crates/daemon/: Cargo.toml
crates/daemon/benches/: fs_read.rs  fs_read_vs_cat.rs
crates/daemon/src/: buffer_pool.rs  changelog.rs  framing.rs  handlers.rs  languages.rs  main.rs  metrics.rs  outline.rs  parse_cache.rs  prewarm.rs  search_cache.rs  server.rs  watcher.rs
crates/daemon/src/backends/: mod.rs  tree_sitter.rs
crates/daemon/src/compact/: mod.rs  strip_noise.rs
crates/mcp-bridge/: Cargo.toml
crates/mcp-bridge/src/: daemon_client.rs  main.rs  mcp.rs  spawn.rs
crates/mcp-bridge/tests/: autospawn.rs  multibridge.rs  reconnect.rs
crates/mcp-cli/: Cargo.toml
crates/mcp-cli/src/: claude_code.rs  codex.rs  main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  paths.rs
doc/: INTEGRATION.md  PROTOCOL.md  ROADMAP.md  TODO.md  architecture.md
doc/services/: README.md  mcp-cli-daemon.plist  mcp-cli-daemon.service
