[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/daemon",
    "crates/mcp-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/madeye/mcp-cli"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "sync", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
git2 = { version = "0.19", default-features = false }
grep-searcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"
walkdir = "2"

protocol = { path = "crates/protocol" }
