[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/daemon",
    "crates/mcp-bridge",
    "crates/mcp-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/madeye/mcp-cli"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "sync", "fs", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
git2 = { version = "0.19", default-features = false }
grep-searcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"
walkdir = "2"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
parking_lot = "0.12"
tempfile = "3"
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
humantime = "2"
chrono = "0.4"
toml_edit = "0.22"
mimalloc = { version = "0.1", default-features = false }
criterion = { version = "0.5", features = ["async_tokio"] }

protocol = { path = "crates/protocol" }
