[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-cli-daemon"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
memmap2.workspace = true
git2.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
ignore.workspace = true
notify.workspace = true
parking_lot.workspace = true
streaming-iterator.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
humantime.workspace = true
chrono.workspace = true
mimalloc = { workspace = true, optional = true }
bumpalo.workspace = true
base64.workspace = true
num_cpus.workspace = true

[features]
# Default-on. Mimalloc beats the system allocator for the daemon's
# tree-sitter / hashmap / vec-heavy workload by enough to be worth the
# binary-size cost; opt out with `--no-default-features` if you need
# the system allocator (e.g. for valgrind, heaptrack, or AddressSanitizer).
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "fs_read"
harness = false
