[package]
name = "mcp-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-cli-bridge"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
