[package]
name = "mcp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
